Provide ability to add custom headers to prefetch request

--- a/demo/px-typeahead-demo.html
+++ b/demo/px-typeahead-demo.html
@@ -205,6 +205,10 @@ limitations under the License.
       prefetchUrl: {
         type: String,
         defaultValue: "https://www.predix-ui.com/px-typeahead/px-typeahead/countries.json"
+      },
+      prefetchHeaders: {
+        type: String,
+        defaultValue: '{"X-Requested-With": "XMLHttpRequest"}'
       }
     }
   });
