resolve typo & provide input type

--- a/px-typeahead.html
+++ b/px-typeahead.html
@@ -116,11 +116,12 @@ Custom property | Description
         value: ''
       },
       /**
-       * Headers for pretech reques
+       * Headers for pretech request
        */
       prefetchHeaders: {
         type: String,
-        value: '{"X-Requested-With": "XMLHttpRequest"}'
+        inputType: 'code:JSON',
+        value: '{"X-Requested-With": "XMLHttpRequest"}'t
       },
       /**
       * The pre-fetched candidates retrieved by prefetchUrl
