fix copy/paste mistake

--- a/px-typeahead.html
+++ b/px-typeahead.html
@@ -120,7 +120,7 @@ Custom property | Description
        */
       prefetchHeaders: {
         type: Object,
-        defaultValue: {
+        value: {
           "X-Requested-With": "XMLHttpRequest"
         }
       },
@@ -163,7 +163,7 @@ Custom property | Description
        */
       remoteUrlSearchHeaders: {
         type: Object,
-        defaultValue: {
+        value: {
           "X-Requested-With": "XMLHttpRequest"
         }
       },
