switch example country list to serve from gthub raw using jsdelivr cdn

--- a/demo/px-typeahead-demo.html
+++ b/demo/px-typeahead-demo.html
@@ -112,7 +112,7 @@ limitations under the License.
               disabled: false,
               localCandidates: '',
               placeholder: "Options from a JSON file",
-              prefetchUrl: "https://www.predix-ui.com/px-typeahead/px-typeahead/countries.json"
+              prefetchUrl: "https://cdn.jsdelivr.net/gh/predixdesignsystem/px-typeahead/countries.json"
             }
           ];
         }
@@ -204,7 +204,7 @@ limitations under the License.
       },
       prefetchUrl: {
         type: String,
-        defaultValue: "https://www.predix-ui.com/px-typeahead/px-typeahead/countries.json"
+        defaultValue: "https://cdn.jsdelivr.net/gh/predixdesignsystem/px-typeahead/countries.json"
       },
       prefetchHeaders: {
         type: Object,
