--- a/demo/simple-demo.html
+++ b/demo/simple-demo.html
@@ -60,7 +60,7 @@ limitations under the License.
         <h3>Prefetched candidates example with maxSuggestions 4</h3>
         <!-- This example doesn't work ¯\_(ツ)_/¯ -->
         <div class="u-1/3">
-          <px-typeahead max-suggestions="8" prefetch-url="https://predixdev.github.io/px-typeahead/px-typeahead/countries.json" placeholder="Ajax call getting countries.json">
+          <px-typeahead max-suggestions="8" prefetch-url="https://cdn.jsdelivr.net/gh/predixdesignsystem/px-typeahead/countries.json" placeholder="Ajax call getting countries.json">
           </px-typeahead>
         </div>
 
