--- a/demo/simple-demo.html
+++ b/demo/simple-demo.html
@@ -25,8 +25,16 @@ limitations under the License.
     px-typeahead Demo</title>
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../../polymer/polymer.html" />
-  <link rel="import" href="../px-typeahead.html" />
-  <link rel="import" href="../../px-theme/px-theme-styles.html" />
+  <link rel="import" href="../../px-icon-set/px-icon-set.html" />
+
+  <!-- Common demo imports -->
+  <link rel="import" href="../../px-demo/px-demo-header.html" />
+  <link rel="import" href="../../px-demo/px-demo-api-viewer.html" />
+  <link rel="import" href="../../px-demo/px-demo-footer.html" />
+  <link rel="import" href="../../px-demo/px-demo-configs.html" />
+  <link rel="import" href="../../px-demo/px-demo-props.html" />
+  <link rel="import" href="../../px-demo/px-demo-interactive.html" />
+  <link rel="import" href="../../px-demo/px-demo-component-snippet.html" />
 
 </head>
 
@@ -52,7 +60,6 @@ limitations under the License.
           </px-typeahead>
         </div>
 
-
         <div class="u-1/3">
           <h4>Testing the overlay of the above typeahead</h4>
         </div>
@@ -60,13 +67,9 @@ limitations under the License.
         <h3>Prefetched candidates example with maxSuggestions 4</h3>
         <!-- This example doesn't work ¯\_(ツ)_/¯ -->
         <div class="u-1/3">
-          <px-typeahead max-suggestions="8" prefetch-url="https://cdn.jsdelivr.net/gh/predixdesignsystem/px-typeahead/countries.json" placeholder="Ajax call getting countries.json">
-          </px-typeahead>
+          <px-typeahead max-suggestions="8" prefetch-url="https://cdn.jsdelivr.net/gh/predixdesignsystem/px-typeahead/countries.json" placeholder="Ajax call getting countries.json"></px-typeahead>
         </div>
-
       </div>
-
-
     </template>
   </dom-bind>
   <script>
