--- a/demo/simple-demo.html
+++ b/demo/simple-demo.html
@@ -35,6 +35,7 @@ limitations under the License.
   <link rel="import" href="../../px-demo/px-demo-props.html" />
   <link rel="import" href="../../px-demo/px-demo-interactive.html" />
   <link rel="import" href="../../px-demo/px-demo-component-snippet.html" />
+  <link rel="import" href="../../px-theme/px-theme-styles.html">
 
 </head>
 
@@ -45,32 +46,29 @@ limitations under the License.
         <style include="px-theme-styles" is="custom-style"></style>
       </custom-style>
 
-      <div class="u-p-">
+      <div style="width:430px; margin:20px">
+        <h2>Examples of px-typeahead</h2>
 
-        <h3>Local candidates example with maxSuggestions 10 </h3>
-        <div class="u-1/3">
+        <div style="margin:30px 0">
+          <h4>Local candidates example with maxSuggestions 10 </h4>
           <label>Selected value : {{inputValue}}</label>
           <px-typeahead max-suggestions="10" local-candidates="{{states}}" placeholder="US states" input-value="{{inputValue}}">
           </px-typeahead>
         </div>
 
-        <h3>Local candidates passed as array of strings</h3>
-        <div class="u-1/3">
+        <div style="margin:30px 0">
+          <h4>Local candidates passed as array of strings</h4>
           <px-typeahead max-suggestions="10" local-candidates='["abc","abcd","abcde","a1b2c3","a/+=|3","Etc/GMT+3"]' placeholder='["abc","abcd","abcde"]'>
           </px-typeahead>
         </div>
 
-        <div class="u-1/3">
-          <h4>Testing the overlay of the above typeahead</h4>
-        </div>
-
-        <h3>Prefetched candidates example with maxSuggestions 4</h3>
-        <div class="u-1/3">
+        <div style="margin:30px 0">
+          <h4>Prefetched candidates example with maxSuggestions 4</h4>
           <px-typeahead max-suggestions="4" prefetch-url="https://cdn.jsdelivr.net/gh/predixdesignsystem/px-typeahead/countries.json" placeholder="Ajax call getting countries.json"></px-typeahead>
         </div>
 
-        <h3>Test custom headers on prefetch</h3>
-        <div class="u-1/3">
+        <div style="margin:30px 0">
+          <h4>Test custom headers on prefetch</h4>
           <px-typeahead max-suggestions="4" prefetch-url="https://cdn.jsdelivr.net/gh/predixdesignsystem/px-typeahead/countries.json" headers='{"From": "test@test.com"}' placeholder="Ajax call getting countries.json"></px-typeahead>
         </div>
       </div>
