--- a/demo/simple-demo.html
+++ b/demo/simple-demo.html
@@ -35,6 +35,7 @@ limitations under the License.
   <link rel="import" href="../../px-demo/px-demo-props.html" />
   <link rel="import" href="../../px-demo/px-demo-interactive.html" />
   <link rel="import" href="../../px-demo/px-demo-component-snippet.html" />
+  <link rel="import" href="../../px-theme/px-theme-styles.html">
 
 </head>
 
@@ -71,7 +72,7 @@ limitations under the License.
 
         <h3>Test custom headers on prefetch</h3>
         <div class="u-1/3">
-          <px-typeahead max-suggestions="4" prefetch-url="https://cdn.jsdelivr.net/gh/predixdesignsystem/px-typeahead/countries.json" headers='{"From": "test@test.com"}' placeholder="Ajax call getting countries.json"></px-typeahead>
+          <px-typeahead max-suggestions="4" prefetch-url="https://cdn.jsdelivr.net/gh/predixdesignsystem/px-typeahead/countries.json" prefetch-headers='{{prefetchHeaders}}' placeholder="Ajax call getting countries.json"></px-typeahead>
         </div>
       </div>
     </template>
@@ -140,6 +141,10 @@ limitations under the License.
         "Wisconsin",
         "Wyoming"
       ]
+
+      app.prefetchHeaders = {
+        'From': 'GE@GE.com'
+      }
     });
   </script>
 </body>
