fix types, issues and redundant imports

--- a/px-typeahead.html
+++ b/px-typeahead.html
@@ -116,7 +116,7 @@ Custom property | Description
         value: ''
       },
       /**
-       * Headers for pretech request
+       * Headers for prefetch request
        */
       prefetchHeaders: {
         type: Object,
