--- a/demo/px-typeahead-demo.html
+++ b/demo/px-typeahead-demo.html
@@ -210,7 +210,7 @@ limitations under the License.
         type: Object,
         inputType: 'code:JSON',
         defaultValue: {
-          "X-Requested-With": "XMLHttpRequest"
+          "Access-Control-Request-Method": "POST"
         }
       }
     }
