resolve demo requirements and default issues.

--- a/px-typeahead.html
+++ b/px-typeahead.html
@@ -122,7 +122,7 @@ Custom property | Description
         type: Object,
         value: function() {
           return {
-            "Access-Control-Request-Method": "GET"
+            // "Access-Control-Request-Method": "GET"
           }
         }
       },
