--- a/px-typeahead.html
+++ b/px-typeahead.html
@@ -122,7 +122,7 @@ Custom property | Description
         type: Object,
         value: function() {
           return {
-            // "Access-Control-Request-Method": "GET"
+            //e.g "Access-Control-Request-Method": "GET"
           }
         }
       },
@@ -167,7 +167,7 @@ Custom property | Description
         type: Object,
         value: function() {
           return {
-            "Access-Control-Request-Method": "GET"
+            //e.g "Access-Control-Request-Method": "GET"
           }
         }
       },
