resolve demo issues

--- a/demo/px-typeahead-demo.html
+++ b/demo/px-typeahead-demo.html
@@ -219,7 +219,7 @@ limitations under the License.
         type: Object,
         inputType: 'code:JSON',
         defaultValue: {
-          "Access-Control-Request-Method": "GET"
+          'From': 'predixdesignsystem@ge.com'
         }
       }
     }
