Fix simple-demo headers demo, downgrade gulp-sass

--- a/px-typeahead.html
+++ b/px-typeahead.html
@@ -121,9 +121,7 @@ Custom property | Description
       prefetchHeaders: {
         type: Object,
         value: function() {
-          return {
-            //e.g "Access-Control-Request-Method": "GET"
-          }
+          return {}
         }
       },
       /**
@@ -166,9 +164,7 @@ Custom property | Description
       remoteUrlSearchHeaders: {
         type: Object,
         value: function() {
-          return {
-            //e.g "Access-Control-Request-Method": "GET"
-          }
+          return {}
         }
       },
       /**
