--- a/test/px-typeahead-test-fixture.html
+++ b/test/px-typeahead-test-fixture.html
@@ -20,29 +20,55 @@ limitations under the License.
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Web Component Test : Fixture for px-typeahead</title>
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="../../web-component-tester/browser.js"></script>
-    <link rel="import" href="../px-typeahead.html" />
-    <link rel="import" href="../../px-theme/px-theme-styles.html">
-    <link rel="import" href="../../iron-test-helpers/iron-test-helpers.html">
-    <script src="px-typeahead-custom-tests.js"></script>
+    <script src="../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+    <script src="../../wct-browser-legacy/browser.js"></script>
+    <script type="module" src="../px-typeahead.js"></script>
+    <script type="module" src="../../px-theme/px-theme-styles.js"></script>
+    <script type="module" src="../../@polymer/iron-test-helpers/iron-test-helpers.js"></script>
+    <script src="./px-typeahead-custom-tests.js"></script>
   </head>
 
   <body>
-    <custom-style>
+    <!-- FIXME(polymer-modulizer):
+        These imperative modules that innerHTML your HTML are
+        a hacky way to be sure that any mixins in included style
+        modules are ready before any elements that reference them are
+        instantiated, otherwise the CSS @apply mixin polyfill won't be
+        able to expand the underlying CSS custom properties.
+        See: https://github.com/Polymer/polymer-modulizer/issues/154
+        -->
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<custom-style>
       <style include="px-theme-styles" is="custom-style"></style>
-    </custom-style>
+    </custom-style>`;
 
-    <test-fixture id="px-typeahead-fixture">
-      <template>
-        <px-typeahead max-suggestions="4" class="px-typeahead" local-candidates='["abc","abcd","abcde"]' placeholder="test"></px-typeahead>
-      </template>
-    </test-fixture>
+document.body.appendChild($_documentContainer.content);
+</script>
 
-    <test-fixture id="typeaheadDisabled">
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<test-fixture id="px-typeahead-fixture">
       <template>
-        <px-typeahead max-suggestions="4" class="px-typeahead" local-candidates='["abc","abcd","abcde"]' placeholder="test" disabled></px-typeahead>
+        <px-typeahead max-suggestions="4" class="px-typeahead" local-candidates="[&quot;abc&quot;,&quot;abcd&quot;,&quot;abcde&quot;]" placeholder="test"></px-typeahead>
       </template>
-    </test-fixture>
+    </test-fixture>`;
+
+document.body.appendChild($_documentContainer.content);
+</script>
+
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<test-fixture id="typeaheadDisabled">
+      <template>
+        <px-typeahead max-suggestions="4" class="px-typeahead" local-candidates="[&quot;abc&quot;,&quot;abcd&quot;,&quot;abcde&quot;]" placeholder="test" disabled=""></px-typeahead>
+      </template>
+    </test-fixture>`;
+
+document.body.appendChild($_documentContainer.content);
+</script>
   </body>
 </html>
